feat: code cleaning