@@ -2,6 +2,8 @@ package emanondev.deepquests.events;
 
 import emanondev.deepquests.interfaces.Task;
 import emanondev.deepquests.interfaces.User;
+import lombok.Getter;
+import lombok.Setter;
 import org.bukkit.event.Cancellable;
 import org.bukkit.event.HandlerList;
 import org.jetbrains.annotations.NotNull;
@@ -10,7 +12,10 @@ public class TaskProgressEvent<T extends User<T>> extends UserEventWithRewards<T
     private static final HandlerList handlers = new HandlerList();
     private final Task<T> task;
     private final int limit;
+    @Getter
     private int progress;
+    @Setter
+    @Getter
     private boolean cancelled = false;
     public TaskProgressEvent(@NotNull T user, @NotNull Task<T> task, int progress, int limit) {
         super(user, task.getProgressRewards());
@@ -27,23 +32,12 @@ public class TaskProgressEvent<T extends User<T>> extends UserEventWithRewards<T
         return handlers;
     }
 
-    public int getProgress() {
-        return progress;
-    }
-
     public void setProgress(int amount) {
-        progress = Math.min(Math.max(0, amount), limit);
+        progress = Math.clamp(amount, 0, limit);
     }
 
     public @NotNull Task<T> getTask() {
         return task;
     }
 
-    public boolean isCancelled() {
-        return cancelled;
-    }
-
-    public void setCancelled(boolean cancel) {
-        cancelled = cancel;
-    }
 }
